infrastructure/existdb/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: existdb-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    #traefik.ingress.kubernetes.io/router.middlewares: dmarc-dev-traefik-middlewares@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /exist
        pathType: Prefix
        backend:
          service:
            name: existdb
            port:
              name: existdb
